--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <html>
+    <style>
+        body{
+            background-image: url(https://img.freepik.com/free-vector/paper-style-dynamic-lines-background_23-2149008629.jpg);
+            background-size: cover;
+            position: relative;
+        }
+        a{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            font-size: 50px;
+            background-color: red;
+            opacity: 0.3;
+            color: blue;
+        }
+    </style>
     <body>
         <a href="./task2.html">TASK 1</a>
     </body>
