--- a/task2.html
+++ b/task2.html
@@ -151,7 +151,7 @@
             position: absolute;
             top: 45%;
             left: 13%;
-            font-size: 35;
+            font-size: 15px;
         }
         
         #B1{
